Fixed the white extra space on the right side of the Browse More Button

--- a/assets/css/mason-grid-section.css
+++ b/assets/css/mason-grid-section.css
@@ -174,4 +174,7 @@
     .circle {
       visibility: hidden;
     }
+    .fusion-row {
+        display: block !important;
+    }
   }
